@@ -73,6 +73,11 @@ vtypet::vtypet(const typet &type)
     vtype = VERILOG_REAL;
     width = 32;
   }
+  else if(type.id() == ID_verilog_chandle)
+  {
+    vtype = CHANDLE;
+    width = 32;
+  }
   else 
   {
     width=0;
@@ -116,6 +121,12 @@ std::ostream &operator << (std::ostream &out, const vtypet &vtype)
 
   case vtypet::VERILOG_REAL:
     return out << "real";
+
+  case vtypet::CHANDLE:
+    return out << "chandle";
+
+  case vtypet::NULL_TYPE:
+    return out << "null";
 
   case vtypet::UNKNOWN:
   case vtypet::OTHER:
